# CASPO

./: .gitignore  README.md  REPRODUCE.md  pyproject.toml  requirements.txt
caspo/: __init__.py  config.py  logging_utils.py
configs/: caspo_deepseekmath7b_gsm8k.yaml  caspo_deepseekmath7b_math.yaml  caspo_qwen25_math_7b.yaml  caspo_rho1b_gsm8k.yaml  caspo_rho1b_math.yaml  caspo_smoke.yaml  caspo_smoke_vllm.yaml  value_smoke.yaml
docs/: INFRA_SETUP.md  RM_TRAINING.md  SESSION_HANDOFF_2026-04-27.md  disaggregated_topology_plan.md  paper_plan_iterative_prm.md
paper/: Makefile  main.tex  references.bib
scripts/: _launch_7b_disagg.sh  _launch_7b_fsdp.sh  _launch_7b_tp8_colocated.sh  _launch_7b_value_train.sh  _launch_rho1b_one_gpu.sh  bench_rollout.py  cache_dataset.py  chain_caspo_phases.sh  check_contamination.py  collect_value_data.py  eval.py  eval_periodic.sh  eval_pv_holdout.py  eval_vphi_auc.py  eval_vphi_dual_auc.sh  health_check.py  inspect_run.py  kill_zombies.sh  launch_7b_caspo.sh  launch_7b_caspo_delta_log_prob.sh  launch_7b_caspo_delta_prob.sh  launch_7b_caspo_frozen_rm.sh  launch_7b_grpo.sh  launch_7b_ppo.sh  launch_7b_ppo_critic.sh  launch_7b_vineppo.sh  launch_7b_vineppo_tp8.sh  launch_caspo_alternating.sh  launch_caspo_refresh_resume.sh  launch_eval_all.sh  launch_eval_rho1b_final_all8.sh  launch_eval_rho1b_sample_all8.sh  launch_fsdp_vllm.sh  launch_qwen_caspo.sh  launch_qwen_grpo.sh  launch_qwen_mc_prm.sh  launch_qwen_mc_prm_holdout.sh  launch_qwen_ppo_critic.sh  launch_qwen_vineppo.sh  launch_rho1b_4method_split.sh  (+22 more)
tests/: conftest.py  test_advantages.py  test_cached_dataset.py  test_checkpointing.py  test_oom.py  (+19 more)
(+47 files in other folders)
